k8s/apps/default/registry/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app: registry
spec:
  type: ClusterIP
  ipFamilies:
    - IPv4
  selector:
    app: registry
  ports:
    - name: http
      port: 80
      targetPort: registry
      protocol: TCP
